Made some changes

--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
+    <!-- BEGIN: BBB AB Seal -->
+    <script type="text/javascript">
+        var bbb = bbb || [];
+        bbb.push(["bbbid", "new-york-city"]);
+        bbb.push(["bid", "87150472"]);
+        bbb.push(["chk", "3A0FD7918B"]);
+        bbb.push(["pos", "bottom-left"]);
+        (function () {
+            var scheme = (("https:" == document.location.protocol) ? "https://" : "http://");
+            var bbb = document.createElement("script");
+            bbb.type = "text/javascript";
+            bbb.async = true;
+            bbb.src = scheme + "seal-newyork.bbb.org/badge/badge.min.js";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(bbb, s);
+        })();
+    </script>
+    <!-- END: BBB AB Seal -->
     <title>Document</title>
 </head>
 <body>
     <h1 id="heading">Bless Home Restoration</h1>
+    <div id="banner">
+
+    </div>
+    <div id="goal">
+        <h2>About Us</h2>
+        <p>Bless Home Restoration is a construction company based in the Bronx, New York. This company strives to build and improve homes across the country.</p>
+    </div>
+    <div id="projects">
+        
+    </div>
 </body>
 </html>
